Update audio and image test

--- a/index.html
+++ b/index.html
@@ -1291,6 +1291,6 @@
         };
       };
     </script>
-    <script async type="text/javascript" src="wow.js"></script>
+    <script async type="text/javascript" src="hi.js"></script>
   </body>
 </html>
